feat: working with fonts

--- a/CSS_MODERNO/style.css
+++ b/CSS_MODERNO/style.css
@@ -3,3 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+h2 {
+    font-size: 17px;
+    font-style: italic;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
