--- a/CSS_MODERNO/style.css
+++ b/CSS_MODERNO/style.css
@@ -14,3 +14,25 @@ h2 {
     color: #ff0000;
     font-weight: bold;
 }
+
+[filme="bad-boys"] {
+    color: green;
+    font-weight: bold;
+}
+
+[filme] {
+    font-size: 20px;
+}
+
+input[type="button"] {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
