--- a/CSS_MODERNO/style.css
+++ b/CSS_MODERNO/style.css
@@ -51,3 +51,26 @@ input[type="button"] {
     /* cobre todo o espaço disponível; */
     background-size: cover;
 }
+
+.div1 {
+    width: 25%;
+    /* There is no set height as the content automatically adjusts */
+    background-color: red;
+    display: inline-block;
+}
+
+.div2 {
+    width: 25%;
+    height: 100px;
+    /* When the content exceeds the height, it will scroll */
+    overflow: scroll;
+    vertical-align: top;
+    background-color: blue;
+    display: inline-block;
+}
+
+.div3 {
+    width: 25%;
+    background-color: green;
+    display: inline-block;
+}
