--- a/PROJETO_FINAL/style.css
+++ b/PROJETO_FINAL/style.css
@@ -71,3 +71,55 @@
     max-width: 100%;
     height: auto;
 }
+
+section.marcas {
+    padding: 100px 0;
+}
+
+section.marcas img {
+    width: calc(100% / 5);
+}
+
+section.porque-nos {
+    padding: 40px 0;
+    background-color: #fbfcfe;
+}
+
+section.porque-nos > .center > h2 {
+    font-size: 64px;
+    text-align: center;
+    width: 100%;
+}
+
+section.porque-nos > .center > p {
+    font-size: 14px;
+    text-align: center;
+    color: #ccc;
+    width: 100%;
+}
+
+.diferenciais {
+    display: flex;
+    margin-top: 50px;
+}
+
+.box-diferencial {
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+    width: 31%;
+    margin-right: 2%;
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+
+.box-diferencial h3{
+    font-size: 28px;
+    color: black;
+    margin: 20px 0;
+}
+
+.box-diferencial p{
+    font-size: 13px;
+    color: #7392ac;
+}
+
+/* TODO: responsivo aula 2/4 */
